--- a/page_analyzer/templates/layout.html
+++ b/page_analyzer/templates/layout.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Third project for Hexlet.io">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>Анализатор страниц</title> <!-- Заголовок вынесен сюда -->
+    <title>Анализатор страниц</title> 
   </head>
   <body class="min-vh-100 d-flex flex-column">
     
-    <!-- Хедер -->
+
     <header class="flex-shrink-0">
       <nav class="navbar navbar-expand-md navbar-dark bg-dark px-3">
         <a class="navbar-brand" href="/">Анализатор страниц</a>
@@ -27,7 +27,7 @@
       </div>
     </main>
     
-    <!-- Футер -->
+
     <footer class="border-top py-3 mt-5 flex-shrink-0">
       <div class="container-lg">
         <div class="text-center">
