--- a/page_analyzer/templates/layout.html
+++ b/page_analyzer/templates/layout.html
@@ -8,18 +8,33 @@
     <title>Анализатор страниц</title> 
   </head>
   <body class="min-vh-100 d-flex flex-column">
-    
+  
 
     <header class="flex-shrink-0">
       <nav class="navbar navbar-expand-md navbar-dark bg-dark px-3">
-        <a class="navbar-brand" href="/">Анализатор страниц</a>
+        <a class="navbar-brand" href="{{ url_for('index') }}">Анализатор страниц</a>
         <div id="navbarNav">
           <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link" href="/urls">Сайты</a></li>
+            <li class="nav-item"><a class="nav-link" href="{{ url_for('urls_index') }}">Сайты</a></li>
           </ul>
         </div>
       </nav>
     </header>
+    
+    
+    {% with messages = get_flashed_messages(with_categories=True) %}
+      {% if messages %}
+        <div class="container-fluid px-0">
+          {% for category, message in messages %}
+            <div class="alert alert-{{ 'success' if category == 'success' else 'danger' }} m-0 rounded-0" role="alert">
+              {{ message }}
+            </div>
+          {% endfor %}
+        </div>
+      {% endif %}
+    {% endwith %}
+    
+    
     <main class="flex-grow-1">
       <div class="container-lg mt-3">
         {% block content %}
