--- a/page_analyzer/templates/urls/show.html
+++ b/page_analyzer/templates/urls/show.html
@@ -1,9 +1,10 @@
 {% extends 'layout.html' %}
 
 {% block content %}
+{% if url %}
   <main class="flex-grow-1">
     <div class="container-lg mt-3">
-      <h1></h1>
+      <h1>{{url.name}}</h1>
 
     
   <div class="table-responsive">
@@ -11,15 +12,15 @@
       <tbody>
         <tr>
           <td>ID</td>
-          <td></td>
+          <td>{{url.id}}</td>
         </tr>
         <tr>
           <td>Имя</td>
-          <td></td>
+          <td>{{url.name}}</td>
         </tr>
         <tr>
           <td>Дата создания</td>
-          <td></td>
+          <td>{{url.created_at}}</td>
         </tr>
       </tbody>
     </table>
@@ -50,4 +51,15 @@
 
     </div>
   </main>
+{% else %}
+<main class="flex-grow-1">
+    <div class="container-lg mt-3">
+      <h1>Страница не найдена</h1>
+
+    
+  <p>Здесь нет того, что вы ищете</p>
+  <p><a href="{{ url_for('index') }}">Вернуться на главную</a></p>
+    </div>
+</main>
+{% endif %}
 {% endblock %}
