--- a/page_analyzer/templates/layout.html
+++ b/page_analyzer/templates/layout.html
@@ -26,7 +26,7 @@
       {% if messages %}
         <div class="container-fluid px-0">
           {% for category, message in messages %}
-            <div class="alert alert-{{ 'success' if category == 'success' else 'danger' }} m-0 rounded-0" role="alert">
+            <div class="alert alert-{{ category }} m-0 rounded-0" role="alert">
               {{ message }}
             </div>
           {% endfor %}
