--- a/page_analyzer/templates/urls/index.html
+++ b/page_analyzer/templates/urls/index.html
@@ -20,7 +20,11 @@
       {% for id, name, _ in urls %}
       <tr>
         <th>{{id}}</th>
-        <th>{{name}}</th>
+        <th>
+          <a href="{{ url_for('url_show', url_id=id) }}">
+          {{name}}
+          </a>
+        </th>
         <th></th>
         <th></th>
       </tr>
